@startuml

class Cliente <<Serializable>> {
    __private data__
    -id: Integer
    -nombre: String
    -apellido: String
    -email: String
    -createAt: Date
    -foto: String
    -facturas: List<Factura>
    ..Methods..
    +getNombreCompleto(): String
    ..Getters and Setters..

}
class Factura <<Serializable>> {
    __private data__
    -id: Integer
    -descripcion: String
    -observacion: String
    -createAt: Date
    ..Methods..
    +calcularTotal(): Double
    ..Getters and Setters..
}
class ItemFactura <<Serializable>> {
    __private data__
    -id: Integer
    -cantidad: Integer
    ..Methods..
    +calcularImporte(): Double
    ..Getters and Setters..
}
class Producto <<Serializable>> {
   __private data__
   -id: Integer
   -nombre: String
   -precio: Double
   ..Getters and Setters..
}

Cliente o-- Factura
Factura *-- ItemFactura
ItemFactura --> Producto

@enduml
